# solana-bootcamp

./: Cargo.toml  README.md
P-0-cli/: README.md
program-0-anchor-basics/: Anchor.toml
program-0-anchor-basics/programs/program-0-anchor-basics/: Cargo.toml
program-0-anchor-basics/programs/program-0-anchor-basics/src/: lib.rs
program-0-anchor-basics/tests/: Cargo.toml  program-0-anchor-basics.ts
program-0-anchor-basics/tests/src/: test_initialize.rs
program-0-counter/: Anchor.toml  package.json
program-0-counter/client/: Cargo.toml
program-0-counter/client/idls/: example.json
program-0-counter/client/src/: main.rs
program-0-counter/programs/program-0-counter/: Cargo.toml
program-0-counter/programs/program-0-counter/src/: lib.rs
program-0-counter/tests/: Cargo.toml
program-0-counter/tests/src/: test_initialize.rs
program-1-favorites/: Anchor.toml  package.json
program-1-favorites/programs/program-1-favorites/: Cargo.toml
program-1-favorites/programs/program-1-favorites/src/: lib.rs
program-1-favorites/tests/: Cargo.toml
program-1-favorites/tests/src/: test_initialize.rs
